--- a/config/database.yml
+++ b/config/database.yml
@@ -1,18 +1,12 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
   timeout: 5000
 
 development:
   adapter: postgresql
   database: db/development.sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
@@ -21,7 +15,11 @@ development:
 test:
   adapter: postgresql
   database: db/test.sqlite3
+  pool: 5
+  timeout: 5000
 
 production:
   adapter: postgresql
   database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
