--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ default: &default
 
 development:
   adapter: postgresql
-  database: db/development.sqlite3
+  database: claponce-api_development
   pool: 5
   timeout: 5000
 
@@ -14,12 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/test.sqlite3
+  database: claponce-api_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: db/production.sqlite3
+  database: claponce-api_production
   pool: 5
   timeout: 5000
